--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p class="note">Free - No Spam - No Data Sharing</p>
         </div>
         <div class="right-section">
-            <img src="dweepio.png" alt="Illustration">
+            <img src="dweep io 1.png" alt="Illustration">
             <p class="author"></p>
         </div>
     </div>
